# main.ts
@@ -7,7 +7,7 @@ import * as https from 'https';
 import * as fs from 'fs';
 import { Server } from 'socket.io';
 import { settings } from './lib/settings';
-import { getConfirmUsernameFeedback, getRegisterEmailFeedback, getRegisterUsernameFeedback, postTempUser } from './lib/api/temp-users';
+import { getConfirmUsernameFeedback, getRegisterEmailFeedback, getRegisterUsernameFeedback, postTempUser, postTempUserConfirm } from './lib/api/temp-users';
 
 const main: Express = express();
 export const port: number = settings.https.port;
@@ -42,13 +42,15 @@ main.use('/chatLogos', express.static('./chatLogos'));
 
 // temp-users //
 
-main.post('/api/temp-users', postTempUser);
-
 main.get('/api/register-username-feedback', getRegisterUsernameFeedback);
 
 main.get('/api/register-email-feedback', getRegisterEmailFeedback);
 
+main.post('/api/temp-users', postTempUser);
+
 main.get('/api/confirm-username-feedback', getConfirmUsernameFeedback);
+
+main.post('/api/temp-users/:username/confirm', postTempUserConfirm);
 
 //// server ////
 
